--- a/index.html
+++ b/index.html
@@ -8,17 +8,38 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
+    <!-- HEADER -->
         <header>
         <div class="container flex"> 
-            <div class="logo"></div>
-            <div class="nav"></div>
-            <div class="login"></div>
+                <div class="logo"> 
+                <img src="img/logo.svg" alt="">
+                </div>
+            <div class="nav">
+            <ul>
+                <li> Scarica</li>
+                <li>Perchè Discord</li>
+                <li>Nitro</li>                    
+                <li>Sicurezza</li>
+                <li>Assistenza</li>
+            </ul>
+            </div>
+                <div class="login">
+                    <div class="button">Accedi</div>
+                </div>
         </div>
-        </header>
-        <main class="flex">
-            <div class="descriptionbox"></div>
-        </main>
-
+        <div class="container flex">
+            <div class="descriptionbox">
+                <h1>Il tuo posto per parlare</h1>
+                <p>... dove far parte di un club scolastico, un gruppo di gamer, una community artistica mondiale o dove trascorrere tempo assieme a un piccolo gruppo di amici: uno spazio in cui è più facile chiacchierare ogni giorno e ritrovarsi più spesso.</p>
+                <div class="flex">
+                    <div class="but-scarica">Scarica per Mac</div>
+                    <div class="but-apri">Apri discord nel tuo browser</div>
+                </div>
+            </div>
+        </div>
+    </div>
+</header>
         <div class="container flex">
             <div class="blue-column"></div>
             <div class="pink-column"></div>
