--- a/index.html
+++ b/index.html
@@ -10,37 +10,39 @@
 <body>
 
     <!-- HEADER -->
-        <header>
-        <div class="container flex"> 
-                <div class="logo"> 
-                <img src="img/logo.svg" alt="">
-                </div>
-            <div class="nav">
-            <ul>
-                <li> Scarica</li>
-                <li>Perchè Discord</li>
-                <li>Nitro</li>                    
-                <li>Sicurezza</li>
-                <li>Assistenza</li>
-            </ul>
-            </div>
-                <div class="login">
-                    <div class="button">Accedi</div>
-                </div>
+    <div class="nav-bar">
+    <div class="container flex"> 
+        <div class="logo"> 
+        <img src="img/logo.svg" alt="">
         </div>
-        <div class="container flex">
-            <div class="descriptionbox">
-                <h1>Il tuo posto per parlare</h1>
-                <p>... dove far parte di un club scolastico, un gruppo di gamer, una community artistica mondiale o dove trascorrere tempo assieme a un piccolo gruppo di amici: uno spazio in cui è più facile chiacchierare ogni giorno e ritrovarsi più spesso.</p>
-                <div class="flex">
-                    <div class="but-scarica">Scarica per Mac</div>
-                    <div class="but-apri">Apri discord nel tuo browser</div>
-                </div>
-            </div>
+    <div class="nav">
+    <ul>
+        <li> Scarica</li>
+        <li>Perchè Discord</li>
+        <li>Nitro</li>                    
+        <li>Sicurezza</li>
+        <li>Assistenza</li>
+    </ul>
+    </div>
+        <div class="login">
+            <div class="button">Accedi</div>
         </div>
     </div>
-</header>
-        <div class="container flex">
+    </div>
+        <header>
+        
+            <div class="container flex">
+                <div class="descriptionbox">
+                    <h1>Il tuo posto per parlare</h1>
+                    <p>... dove far parte di un club scolastico, un gruppo di gamer, una community artistica mondiale o dove trascorrere tempo assieme a un piccolo gruppo di amici: uno spazio in cui è più facile chiacchierare ogni giorno e ritrovarsi più spesso.</p>
+                    <div class="flex-button">
+                    <div class="button scarica">Scarica per Mac</div>
+                    <div class="button apri">Apri discord nel tuo browser</div>
+                    </div>
+                </div>
+            </div>
+        </header>
+        <div class=" container ">
             <div class="blue-column"></div>
             <div class="pink-column"></div>
         </div>
