--- a/index.html
+++ b/index.html
@@ -42,9 +42,16 @@
                 </div>
             </div>
         </header>
-        <div class=" container ">
-            <div class="blue-column"></div>
-            <div class="pink-column"></div>
+
+
+        <div class="container flex">
+                <div class="blue-column">
+                    <img src="img/item1.svg" alt="">
+                    </div>
+                <div class="pink-column">
+                    <h1> Un luogo a invito con tutto lo spazio necessario per parlare</h1>
+                    <p>I server discord sono organizzati in canali tematici in cui puoi collaborare, condividere o semplicemente parlare della tua giornata senza intasare una chat di gruppo.</p>
+                </div>
         </div>
         <div class="bgc">
             <div class="container flex">
