--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
     <!-- HEADER -->
-    <div class="nav-bar">
+    <div class="nav-col">
     <div class="container flex"> 
         <div class="logo"> 
         <img src="img/logo.svg" alt="">
@@ -54,14 +54,25 @@
                 </div>
         </div>
         <div class="bgc">
-            <div class="container flex">
-            <div class="pink-column"></div>
-            <div class="blue-column"></div>
+            <div class="container flex section">
+                <div class="pink-column">
+                    <h1>Dove trovarsi è facile</h1>
+                    <p>Mettiti comodo in un canale vocale quando hai tempo. Gli amici nel tuo server possono vedere che sei li e unirsi istantaneamente senza dover chiamare.</p>
+                </div>
+                <div class="blue-column">
+                    <img src="img/item2.svg" alt="">
+                    </div>
+                
             </div>
         </div>
         <div class="container flex">
-            <div class="blue-column"></div>
-            <div class="pink-column"></div>
+            <div class="blue-column">
+                <img src="img/item3.svg" alt="">
+                </div>
+            <div class="pink-column">
+                <h1>Da pochi a un fandom</h1>
+                <p>Dai inizio a una community di qualsiasi dimensione con strumenti di moderazione e accesso ai membri personalizzabile. Concedi ai membri poteri speciali, crea canali privati, e molto altro.</p>
+            </div>
         </div>
 
         <div class="bgc">
