--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </header>
 
 
-        <div class="container flex">
+        <div class="container flex section">
                 <div class="blue-column">
                     <img src="img/item1.svg" alt="">
                     </div>
@@ -65,7 +65,7 @@
                 
             </div>
         </div>
-        <div class="container flex">
+        <div class="container flex section">
             <div class="blue-column">
                 <img src="img/item3.svg" alt="">
                 </div>
@@ -75,9 +75,17 @@
             </div>
         </div>
 
-        <div class="bgc">
-            <div class="container flex">
-                <div class="last-descriptionbox"></div>
+        <div class="bgc1">
+            <div class="container flex section">
+                <div class="last-descriptionbox"> 
+                    <h1>Tecnologia affidabile per tenersi in contatto</h1>
+                    <p>Video e audio a bassa latenza ti faranno sentire come se foste tutti nella stessa stanza. Fai ciao in video, guarda gli amici giocare in streaming, o riunitevi in una sessione di disegno con la condivisione schermo.</p>
+                    <img src="img/item4-big.svg" alt="">
+                    <div class="download-flex">
+                    <h2>Pronto a iniziare la tua avventura?</h2>
+                    <div class="button scarica blue">Scarica per Mac</div>
+                    </div>
+                </div>
             </div>
 
         </div>
@@ -85,6 +93,7 @@
     <footer>
         <div class="info container flex">
             <div class="first-column"></div>
+            <div class="column"></div>
             <div class="column"></div>
             <div class="column"></div>
             <div class="column"></div>
