--- a/index.html
+++ b/index.html
@@ -90,7 +90,10 @@
                     <p>Video e audio a bassa latenza ti faranno sentire come se foste tutti nella stessa stanza. Fai ciao in video, guarda gli amici giocare in streaming, o riunitevi in una sessione di disegno con la condivisione schermo.</p>
                     <img src="img/item4-big.svg" alt="">
                     <div class="download-flex">
-                    <h2>Pronto a iniziare la tua avventura?</h2>
+                        <div class="stars">
+                        <h2>Pronto a iniziare la tua avventura?</h2>
+                        </div>
+                    
                     <div class="button scarica blue">Scarica per Mac</div>
                     </div>
                 </div>
